--- a/AddressBook/src/main/AndroidManifest.xml
+++ b/AddressBook/src/main/AndroidManifest.xml
@@ -14,14 +14,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.viktorfonic.addressbook.HomeActivity"
+            android:name=".activity.HomeActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.AddContactActivity" />
     </application>
 
 </manifest>
