Make sure Save and Cancel buttons stay visible on Add new contact

--- a/AddressBook/src/main/AndroidManifest.xml
+++ b/AddressBook/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activity.AddContactActivity"/>
+        <activity android:name=".activity.AddContactActivity"
+                android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".activity.ProfileActivity"/>
     </application>
 </manifest>
