--- a/AddressBook/src/main/AndroidManifest.xml
+++ b/AddressBook/src/main/AndroidManifest.xml
@@ -5,8 +5,9 @@
           android:versionName="1.0">
 
     <uses-sdk
-            android:minSdkVersion="7"
+            android:minSdkVersion="11"
             android:targetSdkVersion="18"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
             android:allowBackup="true"
